--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -15,9 +15,11 @@
 <body class="d-flex flex-column vh-100 text-white">
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark opacity-75">
 		<div class="container">
-			<a class="navbar-brand" href="/">Soyther</a>
-			<div class="m-auto">
-				<form action="/" method="post">
+			<div class="col-md-4">
+				<a class="navbar-brand" href="/">Soyther</a>
+			</div>
+			<div class="col-md-4 me-auto">
+				<form class="d-flex m-auto" action="/" method="post">
 					<div class="input-group">
 						<input type="text" id="location" name="location" class="form-control" placeholder="City, region" aria-label="location" aria-describedby="button-addon2">
 						<button class="btn btn-secondary">Search</button>
