--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -19,7 +19,7 @@
 				<a class="navbar-brand" href="/">Soyther</a>
 			</div>
 			<div class="m-auto">
-				<form action="/" method="post">
+				<form action="/get-weather">
 					<div class="input-group">
 						<input type="text" id="location" name="location" class="form-control" placeholder="City, region" aria-label="location" aria-describedby="button-addon2">
 						<button class="btn btn-secondary">Search</button>
