--- a/views/partials/card.ejs
+++ b/views/partials/card.ejs
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-4 offset-md-4">
 		<div class="card shadow opacity-75 bg-dark px-3">
-			<div class="card-body mt-2">
+			<div class="card-body">
 				<h5 class="card-title">
 					<%=weather.location.name%>, <%=weather.location.region%>
 				</h5>
@@ -9,6 +9,7 @@
 					<%=weather.current.weather_descriptions[0]%>
 				</h6>
 			</div>
+			<hr>
 			<ul>
 				<li>
 					temperature:
