added a test page for debug pourposes

--- a/views/partials/error.ejs
+++ b/views/partials/error.ejs
@@ -3,8 +3,8 @@
 		<div>
 			<h1><%= error %></h1>
 			</br><p class="lead">
-				Looks like whatever you were trying to do didn't work. You can search for some weather data by entering a location up above or go back home by clicking
-				<a href="/" class="text-white">here.</a>
+				Looks like whatever you were trying to do didn't work. You can search for some weather data by entering a location up above or see what your data should have looked like by going to
+				<a href="/test" class="text-white">"/test"</a>
 			</p>
 			
 		</div>
